--- a/myblog/templates/blog/index.html
+++ b/myblog/templates/blog/index.html
@@ -5,9 +5,7 @@
   body {background: #6200ea;}
   .nav-wrap {background: none;}
   .title a {color: #fff; opacity: 0.9;}
-  .Menu-Bar {background: #fff;}
-  .Offscreen {background: rgb(247, 249, 251);}
-  .Nav-List a {color: #6200ea;}
+  .one, .two, .three {background: #fff;}
   .socials a {color: #fff; opacity: 0.6;}
   .socials a:hover {opacity: 0.3;}
   .copyright {color: #fff; opacity: 0.6;}
@@ -15,6 +13,7 @@
   .footer {display: none;}
   .large-header {display: none;}
   .index-title {display: none;}
+  #wrapper {overflow: hidden;}
 </style>
 <div id="large-header" class="large-header">
   <canvas id="demo-canvas">
