--- a/myblog/templates/404.html
+++ b/myblog/templates/404.html
@@ -20,13 +20,16 @@
   </canvas>
 </div>
 <div class="index-title">
-    <h1>SUJIN LEE</h1>
-    <h2>{ The Connectivist }</h2>
+    <h1>NOT FOUND</h1>
+  <a href="/about" class="index-title_style rippleria-dark" rippleria>
+    
+    <h2>{ the connectivist }</h2>
     <img class="svg index-icon" src="{% static 'image/svg-icons/code.svg' %}">
     <img class="svg index-icon" src="{% static 'image/svg-icons/close.svg' %}">
     <img class="svg index-icon" src="{% static 'image/svg-icons/image.svg' %}">
     <img class="svg index-icon" src="{% static 'image/svg-icons/close.svg' %}">
     <img class="svg index-icon" src="{% static 'image/svg-icons/music.svg' %}">
+  </a>
 </div>
 <script src="/static/js/index.js"></script>
 {% endblock content %}
