--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -4,14 +4,15 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
     <meta name="description" content="Personal Website">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
     <meta property="fb:app_id" content="1081681621896558" />
     <link rel="icon" type="image/png" href="{% static 'image/background/favicon_logo.png' %}">
     {% block title %}
     <title>Sujin Lee</title>
     {% endblock %}
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="//fonts.googleapis.com/css?family=Josefin+Sans:400,600,700" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
     <link href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css" rel='stylesheet' type='text/css'>
     <link href="//fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link href="{% static 'css/mdl-grid.css' %}" rel="stylesheet">
