--- a/myblog/static/css/text.css
+++ b/myblog/static/css/text.css
@@ -99,12 +99,13 @@ h1,h2,h3,h4,h5 {
 .markdown-body h2:before {
    content: "# ";
    color: #e4d3fb;
+   font-weight: 600;
 }
-
 
 .markdown-body h3:before {
    content: "## ";
    color: #e4d3fb;
+   font-weight: 600;
 }
 
 h2:first-child,h1:first-child,h1:first-child + h2,h3:first-child,h4:first-child,h5:first-child,h6:first-child {
