--- a/myrun/templates/marathon/event_list.html
+++ b/myrun/templates/marathon/event_list.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <link title="favicon" href="http://www.sujinlee.me/static/image/favicon/logo.png" rel="shortcut icon" type="image/png" >
-    <title>RUN UNLIMITED KOREA</title>
+    <title class="notranslate">RUN UNLIMITED KOREA</title>
     <meta name="description" content="마라톤 온라인이 제공하는 2016년간 행사 데이터를 크롤링한 웹페이지입니다">
     <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta property="fb:app_id" content="1081681621896558" />
@@ -21,9 +21,10 @@
     <link href="https://twitter.com/sujinleeme"  rel="me">
     <script src="//code.jquery.com/jquery-2.2.4.min.js" type="text/javascript"></script>
     <script src="//apis.daum.net/maps/maps3.js?apikey=317394cebdea4b6359a849bcf994be38" rel="stylesheet" type="text/javascript"></script>
-    <script src="/static/js/myrun.js" rel="stylesheet" type="text/javascript"></script>
-    <script src="{% static 'js/prefixfree.min.js' %}" rel="stylesheet" type="text/javascript"></script>
+    <script src="//cdn.rawgit.com/zenorocha/clipboard.js/master/dist/clipboard.min.js" rel="stylesheet" type="text/javascript"></script>
     <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" type="text/javascript" ></script>
+    <script src="{% static 'js/myrun.js' %}" rel="stylesheet" type="text/javascript"></script>
+    <script src="{% static 'js/prefixfree.min.js' %}" rel="stylesheet" type="text/javascript"></script>
   </head>
   <!--facebook plugin-->
   <script>(function(d, s, id) {
@@ -39,7 +40,6 @@
      <script>
         $('body').data('count_upcoming_events', {{count_upcoming_events}});
         $('body').data('count_total_events', {{count_total_events}});
-        $('input[type=checkbox]').removeAttr('checked');
     </script>
     <div id="preloader">
       <div id="status"></div>
@@ -276,7 +276,7 @@
           
           marker.setMap(map);  
           
-          var content = '<div class="customoverlay customoverlay--coming">' +
+          var content = '<div class="customoverlay customoverlay--past">' +
               '  <a href="{{ event.website }}" target="_blank">' +
               '    <span class="title">{{ event.title }}</span>' +
               '  </a>' +
